--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,14 @@
           <h1>JS Documentation</h1>
         </div>
         <div class="text-xl">
-          <div class="border-b-2 border-black p-3 pl-5"><a href="#Introduction">Introduction</a></div>
-          <div class="border-b-2 border-black p-3 pl-5"><a href="#What-you-should-already-know">What you should already know</a></div>
-          <div class="border-b-2 border-black p-3 pl-5"><a href="#JavaScript-and-Java">JavaScript and Java</a></div>
-          <div class="border-b-2 border-black p-3 pl-5"><a href="#Hello-world">Hello world</a></div>
-          <div class="border-b-2 border-black p-3 pl-5"><a href="#Variables">Variables</a></div>
-          <div class="border-b-2 border-black p-3 pl-5"><a href="#Declaring-variables">Declaring variables</a></div>
-          <div class="border-b-2 border-black p-3 pl-5"><a href="#Variable-scope">Variable scope</a></div>
-          <div class=" p-3 pl-5"><a href="#Reference">Reference</a></div>
+          <div class="border-b-2 border-black p-3 pl-5 hover:text-red-800 "><a href="#Introduction">Introduction</a></div>
+          <div class="border-b-2 border-black p-3 pl-5 hover:text-red-800"><a href="#What-you-should-already-know">What you should already know</a></div>
+          <div class="border-b-2 border-black p-3 pl-5 hover:text-red-800"><a href="#JavaScript-and-Java">JavaScript and Java</a></div>
+          <div class="border-b-2 border-black p-3 pl-5 hover:text-red-800"><a href="#Hello-world">Hello world</a></div>
+          <div class="border-b-2 border-black p-3 pl-5 hover:text-red-800"><a href="#Variables">Variables</a></div>
+          <div class="border-b-2 border-black p-3 pl-5 hover:text-red-800"><a href="#Declaring-variables">Declaring variables</a></div>
+          <div class="border-b-2 border-black p-3 pl-5 hover:text-red-800"><a href="#Variable-scope">Variable scope</a></div>
+          <div class=" p-3 pl-5 hover:text-red-800"><a href="#Reference">Reference</a></div>
         </div>
       </nav>
     </header>
